# graph_analyzer

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  bash_build.sh  jnigen.yaml  pubspec.yaml  result.txt  sources.txt
example/: README.md
java/dev/dart/: CodeUmlJava.java
java/dev/plantuml/net/sourceforge/plantuml/dot/: GraphvizLinux.java
java/dev/plantuml/net/sourceforge/plantuml/filesdiagram/: FilesListing.java
lib/: code_uml.dart  code_uml_java.dart  graph_analyzer.dart  utils.dart
lib/jni/src/: accessors.dart  jarray.dart  jexceptions.dart  jobject.dart  jreference.dart
lib/jni/src/util/: jlist.dart  jset.dart
lib/src/: analyzer.dart  class_def.dart  components_installer.dart  field_def.dart  method_def.dart  reporter.dart
lib/src/converters/: converter.dart  mermaid_uml_converter.dart  plant_uml_converter.dart  return_type.dart
src/code_uml_java/: CMakeLists.txt  code_uml_java.c
test/: graph_analyzer_test.dart  main.dart  output.txt  result.txt
test/files_for_test/: code_uml_test.dart  graph_analyzer_test.dart
uml/: output.mmd  output.puml
